# docs/swagger.yaml
@@ -13,6 +13,21 @@ definitions:
         description: 'reboot strategy: Always | Never | On-Failure'
         type: string
     type: object
+  github_com_crazyfrankie_kube-ctl_internal_model_req.ConfigMap:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/github_com_crazyfrankie_kube-ctl_internal_model_req.Item'
+        type: array
+      labels:
+        items:
+          $ref: '#/definitions/github_com_crazyfrankie_kube-ctl_internal_model_req.Item'
+        type: array
+      name:
+        type: string
+      namespace:
+        type: string
+    type: object
   github_com_crazyfrankie_kube-ctl_internal_model_req.Container:
     properties:
       args:
@@ -273,6 +288,36 @@ definitions:
         description: Read-only or not
         type: boolean
     type: object
+  github_com_crazyfrankie_kube-ctl_internal_model_resp.ConfigMap:
+    properties:
+      age:
+        type: integer
+      dataNum:
+        type: integer
+      name:
+        type: string
+      namespace:
+        type: string
+    type: object
+  github_com_crazyfrankie_kube-ctl_internal_model_resp.ConfigMapDetail:
+    properties:
+      age:
+        type: integer
+      data:
+        items:
+          $ref: '#/definitions/github_com_crazyfrankie_kube-ctl_internal_model_resp.Item'
+        type: array
+      dataNum:
+        type: integer
+      labels:
+        items:
+          $ref: '#/definitions/github_com_crazyfrankie_kube-ctl_internal_model_resp.Item'
+        type: array
+      name:
+        type: string
+      namespace:
+        type: string
+    type: object
   github_com_crazyfrankie_kube-ctl_internal_model_resp.Item:
     properties:
       key:
@@ -472,6 +517,131 @@ definitions:
 info:
   contact: {}
 paths:
+  /api/configmap:
+    delete:
+      consumes:
+      - application/json
+      description: 删除指定命名空间下的指定ConfigMap
+      parameters:
+      - description: 命名空间
+        in: query
+        name: namespace
+        required: true
+        type: string
+      - description: ConfigMap名称
+        in: query
+        name: name
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 删除成功
+          schema:
+            $ref: '#/definitions/github_com_crazyfrankie_kube-ctl_pkg_response.Response'
+        "500":
+          description: 系统错误(code=30000)
+          schema:
+            $ref: '#/definitions/github_com_crazyfrankie_kube-ctl_pkg_response.Response'
+      summary: 删除ConfigMap
+      tags:
+      - ConfigMap管理
+    get:
+      consumes:
+      - application/json
+      description: 获取指定命名空间下指定ConfigMap的详细信息
+      parameters:
+      - description: 命名空间
+        in: query
+        name: namespace
+        required: true
+        type: string
+      - description: ConfigMap名称
+        in: query
+        name: name
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回ConfigMap的详细信息
+          schema:
+            allOf:
+            - $ref: '#/definitions/github_com_crazyfrankie_kube-ctl_pkg_response.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/github_com_crazyfrankie_kube-ctl_internal_model_resp.ConfigMapDetail'
+              type: object
+        "500":
+          description: 系统错误(code=30000)
+          schema:
+            $ref: '#/definitions/github_com_crazyfrankie_kube-ctl_pkg_response.Response'
+      summary: 获取ConfigMap详情
+      tags:
+      - ConfigMap管理
+    post:
+      consumes:
+      - application/json
+      description: 创建新的 ConfigMap 或更新已存在的 ConfigMap
+      parameters:
+      - description: ConfigMap 配置信息
+        in: body
+        name: pod
+        required: true
+        schema:
+          $ref: '#/definitions/github_com_crazyfrankie_kube-ctl_internal_model_req.ConfigMap'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 操作成功，返回成功消息
+          schema:
+            $ref: '#/definitions/github_com_crazyfrankie_kube-ctl_pkg_response.Response'
+        "400":
+          description: 参数错误(code=20001)
+          schema:
+            $ref: '#/definitions/github_com_crazyfrankie_kube-ctl_pkg_response.Response'
+        "500":
+          description: 系统错误(code=30000)
+          schema:
+            $ref: '#/definitions/github_com_crazyfrankie_kube-ctl_pkg_response.Response'
+      summary: 创建或更新 ConfigMap
+      tags:
+      - ConfigMap管理
+  /api/configmap/list:
+    get:
+      consumes:
+      - application/json
+      description: 获取指定命名空间下的所有ConfigMap列表
+      parameters:
+      - description: 命名空间
+        in: query
+        name: namespace
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回ConfigMap列表
+          schema:
+            allOf:
+            - $ref: '#/definitions/github_com_crazyfrankie_kube-ctl_pkg_response.Response'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/github_com_crazyfrankie_kube-ctl_internal_model_resp.ConfigMap'
+                  type: array
+              type: object
+        "500":
+          description: 系统错误(code=30000)
+          schema:
+            $ref: '#/definitions/github_com_crazyfrankie_kube-ctl_pkg_response.Response'
+      summary: 获取ConfigMap列表
+      tags:
+      - ConfigMap管理
   /api/node/detail:
     get:
       consumes:
